# quantswizard-coder.github.io

./: .env.example  .gitignore  AWS_DEPLOYMENT_GUIDE.md  CODEBASE_STRUCTURE.md  DEPLOY.md  EXECUTIVE_SUMMARY.md  FRONTEND_SETUP_GUIDE.md  GITHUB_DEPLOYMENT.md  INVESTMENT_PARTNER_GUIDE.md  LICENSE  QUICK_START_CARD.md  README.md  SERVERLESS_DEPLOYMENT_GUIDE.md  asset-manifest.json  index.html  pyproject.toml  requirements.txt  setup.sh  start_trading_simulator.sh  stop_trading_simulator.sh
.github/workflows/: deploy-dashboard.yml  deploy.yml
aws-deployment/: cloudformation-template.yml  docker-compose.yml
aws-serverless/: template.yaml
aws-serverless/lambda_functions/health/: handler.py  requirements.txt
aws-serverless/lambda_functions/market_data/: handler.py  requirements.txt
aws-serverless/lambda_functions/simulations/: handler.py  requirements.txt
aws-serverless/lambda_functions/strategies/: handler.py  requirements.txt
backend/: .env.production  Dockerfile  api_server.py  requirements.txt
config/: openbb_providers.yaml
data/raw/: .gitkeep
docs/: API.md  ARCHITECTURE.md  GPU_TRAINING_GUIDE.md  README.md  index.html
frontend/: .env.production  Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/charts/: CandlestickChart.tsx  PortfolioChart.tsx
frontend/src/components/dashboard/: PerformanceMetrics.tsx  TradeHistory.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/simulation/: SimulationConfig.tsx  SimulationControls.tsx
frontend/src/components/strategy/: StrategyParameters.tsx  StrategySelector.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Select.tsx  Tooltip.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/hooks/: useSimulation.ts
frontend/src/pages/: Dashboard.tsx  Simulation.tsx  Strategy.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
scripts/: bitcoin_data_pipeline.py  collect_bitcoin_data.py  fixed_optimization.py  interactive_trading_simulator.py  optimize_strategies.py  simple_optimization.py
src/: __init__.py  main.py
src/backtesting/: __init__.py  backtest_engine.py  performance_metrics.py
src/data/: __init__.py  crypto_providers.py  data_validator.py  openbb_client.py
src/features/: __init__.py  custom_features.py  feature_pipeline.py  openbb_technical.py
src/models/: __init__.py  baselines.py
src/optimization/: __init__.py  parameter_optimizer.py  strategy_configs.py
src/risk_management/: __init__.py  position_sizing.py
src/simulation/: __init__.py  portfolio_tracker.py  simulation_engine.py  ui_components.py
src/strategies/: __init__.py  base_strategy.py  ensemble_strategy.py  ma_crossover.py  momentum.py  rsi_mean_reversion.py
src/utils/: config.py  openbb_helpers.py
static/css/: main.ca2a5f3a.css  main.ca2a5f3a.css.map
static/js/: main.251268cb.js  main.251268cb.js.map  main.cd867590.js  main.cd867590.js.map
tests/: __init__.py  test_setup.py
ui/components/: __init__.py  data_quality.py
visualization/: __init__.py  openbb_charts.py
